# Snippets

./: .gitignore  CMakeLists.txt  README.md
algorithm/graph/bfs/: bfs.h
algorithm/graph/dfs/: test_dfs.cpp
algorithm/sort/: test_sort.cpp
algorithm/sort/merge_sort/: merge_sort.h
algorithm/sort/selection_sort/: selection_sort.h
algorithm/sort/strange_sort/: sleep_sort.h
concurrency/pool/thread_pool/: test_thread_pool.cpp  thread_pool.h
concurrency/queue/lockfree_queue/: lockfree_queue.h  test_lockfree_queue.cpp
concurrency/queue/msg_queue/: msg_queue.h
concurrency/sync/det_mutex_conflict/: det_mutex_conflict.h  det_shared_mutex_conflict.h  test_det_mutex_conflict.cpp  test_det_shared_mutex_conflict.cpp
concurrency/thread/thread_guard/: thread_guard.h
concurrency/thread/thread_task/: test_thread_task.cpp  thread_task.h
container/cache/lru_cache/: lru_cache.h  test_lru_cache.cpp
container/smart_ptr/: intrusive_shared_ptr.h  test_intrusive_shared_ptr.cpp
find_way/: base.h
find_way/astar/: astar.h  test_astar.cpp
find_way/bfs/: bfs.h  test_bfs.cpp
find_way/dfs/: dfs.h  test_dfs.cpp
metaprogramming/: CMakeLists.txt
metaprogramming/factory/general_factory/: general_factory.h  offline_register.h  test_general_factory.cpp
metaprogramming/misc/bitset/: bitmap.h  dynamic_bitset.h  static_bitset.h  static_bitset_32bit.h
metaprogramming/misc/calc_array_size/: calc_array_size.h
metaprogramming/misc/class_unity/: test_class_unity.cpp
metaprogramming/misc/data_container/include/: meta_info.h
metaprogramming/misc/dt/: new_dt.h  old_dt.h
metaprogramming/misc/scope_guard/: ScopeGuard.h  test_scope_guard.cpp
metaprogramming/misc/static_crtp/: static_crtp.h  test_static_crtp.cpp
metaprogramming/static_reflection/: static_reflection.cpp
metaprogramming/type_traits/empty_class_checker/: empty_class_checker.h  how_to_detect_if_a_class_has_member_variables.h  test_empty_class_checker.cpp
metaprogramming/type_traits/member_wrapper/: enum_wrapper.h  struct_wrapper.h  test_enum_wrapper.cpp
mthread/mutex_with_count/: mutex_with_count.cpp  mutex_with_count.h  test_mutex_with_count.cpp
mthread/thread_guard/: test_thread_guard.cpp
others/det_mutex_conflict/: det_mutex_conflict.h  det_shared_mutex_conflict.h  test_det_mutex_conflict.cpp  test_det_shared_mutex_conflict.cpp
others/para_binding/: test_para_binding.cpp
others/timer/: timer.cpp
others/x_macro_patterns/: test_x_macro_patterns_demo.cpp  x_macro_patterns_demo.h
pattern/behavioral/observer/: observer.h  test_observer.cpp
pattern/creational/singleton/: singleton.h  test_singleton.cpp
pattern/structural/crtp/: crtp.h  test_crtp.cpp
sort/: BubbleSort.h  test_sort.cpp
sort/bubble_sort/: BubbleSort.h  bubble_sort.h
sort/merge_sort/: MergeSort.h  merge_sort.h
sort/selection_sort/: SelectionSort.h  selection_sort.h
sort/strange_sort/: MonkeySort.h  SleepSort.h  monkey_sort.h  sleep_sort.h
strange_sort/: test_strange_sort.cpp
tempo/: CMakeLists.txt  readme.md
tempo/bitset/: bitmap.h  dynamic_bitset.h  static_bitset.h  static_bitset_32bit.h  test_dynamic_bitset.cpp
tempo/calc_array_size/: test_calc_array_size.cpp
tempo/class_unity/: class_unity.h
tempo/data_container/include/: meta_info.h
tempo/data_table/: common.h  test_data_table.cpp
tempo/dt/: new_dt.h
tempo/dynamic_bitset/: dynamic_bitset.h  test_dynamic_bitset.cpp
tempo/general_factory/: general_factory.h  offline_register.h
tempo/map_macro_to_struct/: map_macro_to_struct.h  test_map_macro_to_struct.cpp
tempo/member_wrapper/: test_struct_wrapper.cpp
tempo/my_smart_ptr/: intrusive_shared_ptr.h  my_shared_ptr.h  non_intrusive_shared_ptr.h  test_intrusive_shared_ptr.cpp  test_my_shared_ptr.cpp  test_non_intrusive_shared_ptr.cpp
tempo/others/: multi_stream_input_and_sync.cpp
tempo/static_crtp/: static_crtp.h
tempo/static_reflection/: readme.md
tempo/tuple_for_each/: test_tuple_for_each.cpp  tuple_for_each.h
utility/string/string_split/: string_split.h  test_string_split.cpp
utility/timer/: timer.cpp
